// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV sc-jmhFOf fCJJXR"
    >
      <div
        class="sc-jXktwP gBXhib"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr cMsQud sc-jmhFOf fCJJXR"
    >
      <div
        class="sc-jXktwP dcBeSJ"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="sc-eFubAy qbHgp sc-jmhFOf fCJJXR"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-fmlJLJ kFVJVF cGapid"
      >
        <div
          class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV"
        >
          <div
            class="sc-jXktwP gBXhib"
          />
          <div
            class="sc-fKFyDc dToKui sc-bBXqnf kCTWx"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-ljRboo gDnGsn"
      >
        <div
          class="sc-gKsewC cgpPfo sc-iBPRYJ bgxczn"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV sc-jmhFOf fCJJXR"
    >
      <div
        class="sc-jXktwP gBXhib"
      />
      <div
        class="sc-fKFyDc dToKui sc-bBXqnf kCTWx"
      >
        <div
          class="sc-fKFyDc dToKui sc-bBXqnf gUmJJR"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 jajFOe sc-bqyKva sc-bkzZxe gjQfnS hgJIgM sc-dIUggk YDvpG"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ ewcxWD sc-hHftDr fYuNSV sc-jmhFOf fCJJXR"
    >
      <div
        class="sc-jXktwP gBXhib"
      />
      <div
        class="sc-fKFyDc dToKui sc-bBXqnf kCTWx"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
